员工展示 without department is ok

--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -46,25 +46,25 @@
         <thead>
         <tr>
             <th>#</th>
-            <th>lastName</th>
-            <th>email</th>
-            <th>gender</th>
-            <th>department</th>
+            <th>name</th>
+            <th>age</th>
+            <th>sex</th>
             <th>birth</th>
+            <th>phone</th>
             <th>操作</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="emp:${emps}">
             <td th:text="${emp.id}"></td>
-            <td>[[${emp.lastName}]]</td>
-            <td th:text="${emp.email}"></td>
-            <td th:text="${emp.gender}==0?'女':'男'"></td>
-            <td th:text="${emp.department.departmentName}"></td>
-            <td th:text="${#dates.format(emp.birth, 'yyyy-MM-dd HH:mm')}"></td>
+            <td>[[${emp.name}]]</td>
+            <td th:text="${emp.age}"></td>
+            <td th:text="${emp.sex}==0?'女':'男'"></td>
+            <td th:text="${#dates.format(emp.birth,'yyyy-MM-dd')}"></td>
+            <td th:text="${emp.phone}"></td>
             <td>
-                <a class="btn btn-sm btn-primary" th:href="@{/emp/}+${emp.id}" >编辑</a>
-                <form th:action="@{/emp/}+${emp.id}" method="post">
+                <a class="btn btn-sm btn-primary" th:href="@{'/emp/'+${emp.id}}" >编辑</a>
+                <form th:action="@{'/emp/'+${emp.id}}" method="post">
                     <input type="hidden" name="_method" value="delete"/>
                     <button type="submit" class="btn btn-sm btn-danger">删除</button>
                 </form>
