员工增删改查is ok

--- a/src/main/resources/templates/emp/add.html
+++ b/src/main/resources/templates/emp/add.html
@@ -17,27 +17,31 @@
         <input type="hidden" name="_method" value="put" th:if="${emp!=null}">
         <input type="hidden" name="id" th:if="${emp!=null}" th:value="${emp.id}">
         <div class="form-group">
-            <label>LastName</label>
-            <input name="lastName" type="text" class="form-control" placeholder="zhangsan" th:value="${emp!=null}?${emp.lastName}">
+            <label>name</label>
+            <input name="name" type="text" class="form-control" placeholder="zhangsan" th:value="${emp!=null}?${emp.name}">
         </div>
         <div class="form-group">
-            <label>Email</label>
-            <input name="email" type="email" class="form-control" placeholder="zhangsan@atguigu.com" th:value="${emp!=null}?${emp.email}">
+            <label>age</label>
+            <input name="age" type="number" class="form-control" placeholder="18" th:value="${emp!=null}?${emp.age}">
         </div>
         <div class="form-group">
-            <label>Birth</label>
-            <input name="birth" type="text" class="form-control" placeholder="1997/11/06" th:value="${emp!=null}?${emp.birth}">
-        </div>
-        <div class="form-group">
-            <label>Gender</label><br/>
+            <label>sex</label><br/>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="gender" value="1" th:checked="${emp!=null}?${emp.gender==1}">
+                <input class="form-check-input" type="radio" name="sex" value="1" th:checked="${emp!=null}?${emp.sex==1}">
                 <label class="form-check-label">男</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="gender" value="0" th:checked="${emp!=null}?${emp.gender==0}">
+                <input class="form-check-input" type="radio" name="sex" value="0" th:checked="${emp!=null}?${emp.sex==0}">
                 <label class="form-check-label">女</label>
             </div>
+        </div>
+        <div class="form-group">
+            <label>Birth</label>
+            <input name="birth" type="text" class="form-control" placeholder="1997/11/06" th:value="${emp!=null}?${#dates.format(emp.birth,'yyyy/MM/dd')}">
+        </div>
+        <div class="form-group">
+            <label>phone</label>
+            <input name="phone" type="number" class="form-control" placeholder="18913015780" th:value="${emp!=null}?${emp.phone}">
         </div>
         <button type="submit" class="btn btn-primary" th:text="${emp!=null}?'修改':'添加'">添加</button>
     </form>
