--- a/src/main/resources/templates/emp/list.html
+++ b/src/main/resources/templates/emp/list.html
@@ -41,6 +41,9 @@
         }
     </style>
 </head>
+
+<body>
+<div><a href="/main" class="btn btn-primary btn-block">return</a></div>
 <div class="table-responsive">
     <table class="table table-striped table-sm">
         <thead>
@@ -73,7 +76,5 @@
         </tbody>
     </table>
 </div>
-<body>
-
 </body>
 </html>
