--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -5,7 +5,12 @@
     <title>main</title>
 </head>
 <body>
-<a th:href="@{/emps}">员工列表</a>
-<a th:href="@{/emp}">员工添加</a>
+<div>
+<ul class="list-group">
+    <li class="list-cell"><a th:href="@{/emps}">员工列表</a></li>
+    <li class="list-cell"><a th:href="@{/emp}">员工添加</a></li>
+</ul>
+</div>
+
 </body>
 </html>
